api login/register

--- a/todo.text
+++ b/todo.text
@@ -1,6 +1,4 @@
-#todo: private route,json server auth
-
-axios , toast
+#todo: private route,json server auth, thêm form đăng ký
 
 #mission: 
     - create ui
